GL/Projet_GL/src/test/deca/syntax/invalid/sansObjet/fichier_2.decah
#include "fichier_3.decah"

{
    
}